--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,6 @@ services:
     name: deploy-with-yaml
     env: python
     plan: free
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn main:app"
+    buildCommand: "poetry install"
+    startCommand: "uvicorn main:app --host 0.0.0.0 --port 8000"
     pythonVersion: "3.11.9"
